# AlphaMaderaChat

./: .env  .gitignore  README.md  activate_venv.sh  app.py  assistant.txt  assistant2.txt  assistant_new.txt  assistant_save.txt  chat.json  chat1.json  chat2.json  chat3.json  chat34.json  chat4.json  chat5.json  chat6.json  chat_app.py  chat_backup.json  chat_brent1.json  chat_openai.json  chat_save.json  chat_save2.json  chat_save3.json  config.yaml  design.md  food_vision.py  nutrients.txt  pyproject.toml  requirements.txt  s3_utils.py  test.xml  test_vision.py  vision.py
ai_drivers/: __init__.py  base_driver.py  claude_driver.py  gemini_driver.py  grok_driver.py  openai_driver.py
