[project]
name = "able"
version = "0.1.0"
description = ""
authors = [
    {name = "brentewood",email = "brent.wood@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "anthropic (>=0.45.2,<0.46.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
